--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,9 +18,7 @@ env:
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-  strategy:
-    matrix:
-      BUILD_CONFIGURATION: [Release, Debug]
+  BUILD_CONFIGURATION: ${{matrix.buildconfig}}
 
 permissions:
   contents: read
@@ -28,7 +26,11 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
-
+    
+    strategy:
+      matrix:
+        buildconfig: [Release, Debug]
+    
     steps:
     - uses: actions/checkout@v3
 
