--- a/Wavebreaker-Hook/Wavebreaker-Hook.vcxproj.filters
+++ b/Wavebreaker-Hook/Wavebreaker-Hook.vcxproj.filters
@@ -18,7 +18,13 @@
     <ClInclude Include="framework.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="SafetyHook\safetyhook.hpp">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="SafetyHook\Zydis.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="ini.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
@@ -26,7 +32,10 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="SafetyHook\safetyhook.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="SafetyHook\Zydis.c">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
