--- a/cmake.toml
+++ b/cmake.toml
@@ -14,13 +14,14 @@ CMAKE_CXX_STANDARD_REQUIRED = true
 [fetch-content]
 safetyhook = { git = "https://github.com/cursey/safetyhook", tag = "v0.1.1" }
 toml11 = { git = "https://github.com/ToruNiina/toml11", tag = "v3.7.1" }
+spdlog = { git = "https://github.com/gabime/spdlog", tag = "v1.12.0"}
 
 [target.wavebreakerclient]
 type = "shared"
 sources = ["src/**.cpp", "include/**.hpp"]
 include-directories = ["include"]
 compile-features = ["cxx_std_23"]
-link-libraries = ["safetyhook", "toml11", "wininet"]
+link-libraries = ["safetyhook", "toml11", "spdlog", "wininet"]
 
 [[install]]
 targets = ["wavebreakerclient"]
