--- a/cmake.toml
+++ b/cmake.toml
@@ -3,6 +3,9 @@
 name = "Wavebreaker-Hook"
 version = "2.1.0"
 languages = ["CXX"]
+cmake-after = """
+set(VCPKG_TARGET_TRIPLET x86-windows-static)
+"""
 
 [options]
 SAFETYHOOK_FETCH_ZYDIS = true
@@ -12,16 +15,23 @@ CMAKE_CXX_STANDARD = "23"
 CMAKE_CXX_STANDARD_REQUIRED = true
 
 [fetch-content]
-safetyhook = { git = "https://github.com/cursey/safetyhook", tag = "v0.1.1" }
+safetyhook = { git = "https://github.com/cursey/safetyhook", tag = "v0.1.3" }
 toml11 = { git = "https://github.com/ToruNiina/toml11", tag = "v3.7.1" }
 spdlog = { git = "https://github.com/gabime/spdlog", tag = "v1.12.0"}
+
+[vcpkg]
+version = "2023.08.09"
+packages = [ "imgui[freetype,dx9-binding,win32-binding]" ]
+
+[find-package]
+imgui = { config = true, required = true }
 
 [target.wavebreakerclient]
 type = "shared"
 sources = ["src/**.cpp", "include/**.hpp"]
 include-directories = ["include"]
 compile-features = ["cxx_std_23"]
-link-libraries = ["safetyhook", "toml11", "spdlog", "wininet"]
+link-libraries = ["safetyhook", "toml11", "spdlog", "wininet", "imgui::imgui", "D3d9"]
 
 [[install]]
 targets = ["wavebreakerclient"]
