Add DInput hook, make ImGui work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,10 @@ find_package(imgui REQUIRED CONFIG)
 # Target: wavebreakerclient
 set(wavebreakerclient_SOURCES
 	"src/D3D9Hook.cpp"
+	"src/DInputHook.cpp"
 	"src/dllmain.cpp"
 	"include/D3D9Hook.hpp"
+	"include/DInputHook.hpp"
 	"include/config.hpp"
 	"include/nethook.hpp"
 	"include/overlay.hpp"
