--- a/cmake.toml
+++ b/cmake.toml
@@ -17,11 +17,11 @@ CMAKE_CXX_STANDARD_REQUIRED = true
 [fetch-content]
 safetyhook = { git = "https://github.com/cursey/safetyhook", tag = "v0.1.3" }
 toml11 = { git = "https://github.com/ToruNiina/toml11", tag = "v3.7.1" }
-spdlog = { git = "https://github.com/gabime/spdlog", tag = "v1.12.0"}
+spdlog = { git = "https://github.com/gabime/spdlog", tag = "v1.12.0" }
 
 [vcpkg]
 version = "2023.08.09"
-packages = [ "imgui[freetype,dx9-binding,win32-binding]" ]
+packages = ["imgui[freetype,dx9-binding,win32-binding]"]
 
 [find-package]
 imgui = { config = true, required = true }
@@ -31,7 +31,14 @@ type = "shared"
 sources = ["src/**.cpp", "include/**.hpp"]
 include-directories = ["include"]
 compile-features = ["cxx_std_23"]
-link-libraries = ["safetyhook", "toml11", "spdlog", "wininet", "imgui::imgui", "D3d9"]
+link-libraries = [
+    "safetyhook",
+    "toml11",
+    "spdlog",
+    "wininet",
+    "imgui::imgui",
+    "D3d9",
+]
 
 [[install]]
 targets = ["wavebreakerclient"]
