Add WinInet hooks + bunch of other stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,15 @@ features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_LibraryLoader",
     "Win32_System_Threading",
-    "Win32_Security"
+    "Win32_Security",
+    "Win32_Networking_WinInet"
 ]
 
 [dependencies]
 anyhow = "1.*"
-retour = { version = "0.3.1", features = [
-    "nightly",
-    "static-detour",
-    "thiscall-abi",
-] }
 serde = { version = "1.0.196", features = ["derive"] }
 tracing = "0.*"
 tracing-appender = "0.*"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 figment = { version = "0.*", features = ["toml", "env"] }
+crochet = "0.2.3"
