add MBID reading, check for nullptr in send_hook

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ tracing-appender = "0.*"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 figment = { version = "0.*", features = ["toml", "env"] }
 crochet = "0.2.3"
+lofty = "0.18.2"
