--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wavebreaker_client"
-version = "0.1.0"
+version = "3.0.0"
 edition = "2021"
 
 [lib]
@@ -29,4 +29,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 figment = { version = "0.*", features = ["toml", "env"] }
 crochet = "0.2.3"
 lofty = "0.18.2"
-urlencoding = "2.1.3"
+url_encoded_data = "0.6.1"
